--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <div class="card">
             <div class="columns">
                 <div>
-                    <img src="images/image-product-desktop.jpg">
+                    <img src="images/image-product-desktop.jpg" class="product-img">
                 </div>
                 <div class="right">
-                    <p>PERFUME</p>
-                    <h1 class="h-style">Gabrielle Essence Eau De Parfum</h1>
+                    <p class="mini" style="letter-spacing: 0.3rem;">PERFUME</p>
+                    <h1 class=" product h-style">Gabrielle Essence Eau De Parfum</h1>
                     <p>A floral, solar and voluptuous interpretation composed by Oliver Polge, Perfume-Creator for the House of CHANEL.</p>
-                    <div class="flex">
+                    <div class="prices flex">
                         <p class="price h-style">$149.99</p>
-                        <s>$169.99</s>
+                        <s class="mini">$169.99</s>
                     </div>
-                    <button class="btn">
-                        <img src="images/icon-cart.svg">
-                        <p>Add to Cart</p>
+                    <button class="btn flex">
+                        <img src="images/icon-cart.svg" style="margin-right: 0.5rem;">
+                        <p class="bold">Add to Cart</p>
                     </button>
                 </div>
             </div>
