--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="card">
             <div class="columns">
                 <div>
-                    <img src="images/image-product-desktop.jpg" class="product-img">
+                    <img src="images/image-product-mobile.jpg" class="mobile">
+                    <img src="images/image-product-desktop.jpg" class="desktop">
                 </div>
                 <div class="right">
                     <p class="mini" style="letter-spacing: 0.3rem;">PERFUME</p>
